cleanup libs